[package]
name = "lieroleague"
version = "0.1.0"
authors = ["Anders Höckersten <anders@hockersten.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
eventsourcing = "0.1"
eventsourcing-derive = "0.1"
mongodb = { version = "0.3", features = ["ssl"] }
serde = { version= "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
