[package]
name = "lieroleague"
version = "0.1.0"
authors = ["Anders Höckersten <anders@hockersten.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = ["json", "mongodb_pool"] }
eventsourcing = "0.1"
eventsourcing-derive = "0.1"
mongodb = { version = "0.3" }
# mongodb = { version = "0.3", features = ["ssl"] }
serde = { version= "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
passwords = { version = "1.1", features = ["crypto"] }
bson = "0.13"
enum-display-derive = "0.1"
rocket_cors = "0.5"
chrono-tz = "0.5"

[patch.crates-io]
eventsourcing = { git = 'https://github.com/ahockersten/eventsourcing' }
